# ReMedi

./: .gitignore  BackgroundSubtractor.cpp  BackgroundSubtractor.h  CMakeLists.txt  Cloudject.hpp  CloudjectDetector.cpp  CloudjectDetector.h  CloudjectFPFHRecognizer.cpp  CloudjectFPFHRecognizer.h  CloudjectModel.cpp  CloudjectModel.hpp  ColorFrame.cpp  ColorFrame.h  CvExtraTools.cpp  CvExtraTools.h  DepthFrame.cpp  DepthFrame.h  Descriptor.hpp  DetectionOutput.cpp  DetectionOutput.h  Frame.cpp  Frame.h  InteractiveRegisterer.cpp  InteractiveRegisterer.h  Monitorizer.cpp  Monitorizer.h  MonitorizerParams.hpp  MotionSegmentator.cpp  MotionSegmentator.h  README.md  Reader còpia.h  Reader.cpp  Reader.h  Remedi.cpp  Remedi.h  Sequence.cpp  Sequence.h  StatTools.cpp  StatTools.h  SupervisedObjectPicker.cpp  (+10 more)
xbuild/: CMakeCache.txt  cmake_install.cmake
xbuild/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
xbuild/remedi.xcodeproj/: project.pbxproj
xbuild/remedi.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xbuild/remedi.xcodeproj/project.xcworkspace/xcuserdata/aclapes.xcuserdatad/: UserInterfaceState.xcuserstate
xbuild/remedi.xcodeproj/xcuserdata/aclapes.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  remedi.xcscheme  xcschememanagement.plist
